tests/expected/task-1/err-doubledecl-2.uc.out
---
test: run suites/task-1/err-doubledecl-2.uc
---
suites/task-1/err-doubledecl-2.uc:2:7: semantic error: identifier 'x' already declared ([1:3])
    var x, z; // error: identifier already declared
        ^


exit: 1
